# bascula-cam

./: .gitignore  MANIFEST.txt  MIGRATION.md  Makefile  README-rollback.md  README-systemd.md  README.md  README.md.bak  README_Audio.md  ROLLBACK.md  bascula_digital.py  bascula_digital_claude.py  bascula_gandalf15.py  calibrar_gandalf15.py  camera.py  camera_diagnostic.py  camera_fixes.sh  clean_git.sh  diagnose_serial.py  fix_plymouth.sh  fix_plymouth_v2.sh  fix_ui.py  gui_load_cell_app.py  hx711_pi_diag.py  hx711_rawtest.py  hx711_rawtest_slow.py  hx711_rawtest_slow_alt.py  main.py  main.py.bak  main_modern.py  nano hx711_rawtest.py  pyproject.toml  pytest.ini  python3 headless_test_hx711.py  requirements.txt  scale_hx711_pi.py  serial_reader.py  serial_reader.py.bak  setup.py  tare_manager.py  (+6 more)
UI/: README
bascula/: __init__.py  main.py  miniweb.py  state.py  utils.py
ci/: README.md  ui_probe.py
config/: settings.py
data/: local_food_db.json
docs/: AUDIO_MAX98357A.md  DISPLAY_HDMI.md  GUIA_PUESTA_EN_MARCHA.md  INSTALACION_MEJORADA.md  INSTALL_BASCULA.md  INSTALL_STEP_BY_STEP.md  INSTALL_STEP_BY_STEP.md.bak  INTEGRACION_FOTOS_MINIMO.md  MINIWEB_OVERRIDE.md  MODO_RECETAS.md  OFFLINE.md  ONE_CLICK_INSTALL.md  QA_CHECKLIST.md  README-wifi-ap.md  README_RETRO_THEME.md  SETUP_SECURE.md  SETUP_XINITRC.md  Troubleshooting.md  UI_TROUBLESHOOTING.md  USAGE.md  cableado.md  polkit-networkmanager.md  ui-modern.md
installer/: setup.sh  uninstall.sh
networkmanager/: bascula-ap.nmconnection
packaging/: postinst
pantalla_reloj/: __init__.py  app.py  config.py  health.py  secrets.py
polkit/: 10-bascula-nm.rules  (+1 more)
ui/: app.py  (+3 more)
(+389 files in other folders)
