[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bascula-cam"
version = "0.0.0"
description = "Báscula con cámara y TTS Piper"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "Pillow>=9.5",
    "Flask>=2.2",
    "requests>=2.31",
    "qrcode[pil]>=7.4",
    "fastapi>=0.110",
    "PyYAML>=6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "bascula",
    "bascula.*",
    "python_backend",
    "python_backend.*",
]
