[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bascula"
version = "0.1.0"
description = "Bascula camera and web stack for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "Bascula Team"}
]
keywords = ["raspberry-pi", "vision", "bascula"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
]

dynamic = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bascula*"]
